# qap-sandbox

./: .gitignore  README.md  pyproject.toml  setup.cfg  test_first.py
tests/: conftest.py  test_first.py  test_main_page.py  test_user_auth.py  test_user_pets.py  utils.py
